[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/img/char_blue_1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/Sfx/jump_cropped.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/Sfx/death_cropped.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 1 )
region = Rect2( 56, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 1 )
region = Rect2( 168, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 56, 56 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 1 )
region = Rect2( 0, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 1 )
region = Rect2( 56, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 1 )
region = Rect2( 112, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 1 )
region = Rect2( 168, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 1 )
region = Rect2( 224, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 1 )
region = Rect2( 280, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 1 )
region = Rect2( 336, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 1 )
region = Rect2( 392, 112, 56, 56 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 1 )
region = Rect2( 280, 168, 56, 56 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 60 ) ],
"loop": false,
"name": "jump",
"speed": 24.0
}, {
"frames": [  ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=61]
extents = Vector2( 1.71875, 4.21875 )

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 6.5, 1 )

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 7.5, 15 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 208, 376 )
z_index = -2
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "24 x 24 sprite"
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4, -4 )
frames = SubResource( 54 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 10.5 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 61 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="ParallaxBackground" parent="Camera2D" instance=ExtResource( 5 )]

[node name="TrampolineDetector" type="Area2D" parent="."]
visible = false
position = Vector2( -4.5, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrampolineDetector"]
position = Vector2( -1.5, 27 )
shape = SubResource( 62 )

[node name="GravityDetector" type="Area2D" parent="."]
visible = false
position = Vector2( -4.5, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityDetector"]
position = Vector2( -1.5, 13 )
shape = SubResource( 63 )

[node name="HitDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
position = Vector2( -6, 10.5 )
scale = Vector2( 3.2, 3.2 )
shape = SubResource( 61 )

[node name="Audio" type="Node2D" parent="."]

[node name="Jump" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 3 )

[node name="Death" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource( 4 )

[connection signal="area_entered" from="TrampolineDetector" to="." method="_on_TrampolineDetector_area_entered"]
[connection signal="area_entered" from="GravityDetector" to="." method="_on_GravityDetector_area_entered"]
[connection signal="area_exited" from="GravityDetector" to="." method="_on_GravityDetector_area_exited"]
[connection signal="area_entered" from="HitDetector" to="." method="_on_HitDetector_area_entered"]
